--- a/notebookcompare/notebookapp/templates/mainpage.html
+++ b/notebookcompare/notebookapp/templates/mainpage.html
@@ -17,14 +17,20 @@
 	</br>
 	<li><a href="/models/add/">Add a new model </a></li>	
 	<li><a href="/models/">View a list with all our models </a></li>
-	<li><a href="/models/view/1">View the notebook details details (for example Z930) </a></li>
+	<li><a href="/models/view/1">View the notebook details details (for example ASUS Z930) </a></li>
+	<li><a href="/models/edit/1">Edit a notebook </a></li>
+	<li><a href="/models/delete/1/">Delete a notebook</a></li>
 	</li>
 	</br>
+	<li><a href="/components/add/">Add a new component </a></li>
 	<li><a href="/components/">View a list with all the components avaible and search your notebook trough the list </a></li>
-	<li><a href="/components/view/CPU">View a list with the diferents specifications of a component (for example CPU) </a></li>
+	<li><a href="/components/view/1">View a list with the diferents specifications of a component (for example CPU) </a></li>
+	<li><a href="/components/edit/1">Edit a component </a></li>
 	<br>
+	<li><a href="/specifications/add/">Add a new specification</a></li>
 	<li><a href="/specifications/">View a list with all the specifications avaible </a></li>
-	<li><a href="/specifications/view/5">View a list with a specific specification (for example Intel Core i5) </a></li>
+	<li><a href="/specifications/view/1">View a list with a specific specification (for example Intel Core i5) </a></li>
+	<li><a href="/specifications/edit/1">Edit specification</a></li>
 	<br>
 	<li><a href="/login/">Log in with an user </a></li>
 	<li><a href="/logout/">Log out</a></li>
@@ -38,16 +44,14 @@
 	<li><a href="/review/1/view">View a list of reviews of a model </a></li>
 	<li><a href="/review/view/3/">View a review </a></li>
 
-	<li><a href="/components/add/">Add a new component </a></li>
-	<li><a href="/specifications/add/">Add a new specification</a></li>
-	<li><a href="/specifications/edit/16">EDIT specification</a></li>
+
+
+
 	
 
 	<li><a href="/review/delete/1">Delete a review </a></li>
 
         <li><a href="/review/edit/1">Modify a review </a></li>
-	<li><a href="/models/edit/1">Modificar model portàtil </a></li>
-	<li><a href="/models/delete/1/">Eliminar model portàtil</a></li>
 
 
 
