minor ui changes
sample database user root pw root

--- a/notebookcompare/notebookapp/templates/mainpage.html
+++ b/notebookcompare/notebookapp/templates/mainpage.html
@@ -32,64 +32,20 @@
 	<li><a href="/specifications/view/1">View a list with a specific specification (for example Intel Core i5) </a></li>
 	<li><a href="/specifications/edit/1">Edit specification</a></li>
 	<br>
+	<li><a href="/register/">Register a new user </a></li>
 	<li><a href="/login/">Log in with an user </a></li>
+	<li><a href="/userpanel/">User Panel</a></li>
+	<li><a href="/userpanel/my-reviews">View user own reviews</a></li>
+	<li><a href="/userpanel/my-laptops">View user own laptops</a></li>
 	<li><a href="/logout/">Log out</a></li>
 	<br>
-	<h3> New Functions</h3>
-	<li><a href="/register/">Register a new user </a></li>
-
-
 	<li><a href="/review/">View a list of reviews  </a></li>
-	<li><a href="/review/3/add">Add Review a model </a></li>
+	<li><a href="/review/1/add">Add Review a model </a></li>
 	<li><a href="/review/1/view">View a list of reviews of a model </a></li>
-	<li><a href="/review/view/3/">View a review </a></li>
-
-
-
-
-	
-
+	<li><a href="/review/view/1/">View a review </a></li>
 	<li><a href="/review/delete/1">Delete a review </a></li>
-
         <li><a href="/review/edit/1">Modify a review </a></li>
 
-
-
-
-	
-
-	
-	
-
-
-	
-<p>	
-     <b>done</b>(2,5 puntos) Permitir que los usuarios registrados creen nuevas instancias de los objetos del modelo, siempre que tenga sentido que los usuarios las creen.<p>
- <b>  Afegim Models, Specs, Marques, i Components</b>
-
-</br>
-
-<b>done</done>(2,5 puntos) Permitir que los usuarios modifiquen instancias de objetos, por ejemplo que puedan modificar las instancias creadas por ellos mismos.</br>
-<b> Can edit Components , Specifications, reviews,models </b>
-
-</br>
-<b>done</b>    (1 punto) Permitir que los usuarios borren instancias de los objetos del modelo, normalmente las creadas por ellos mismos.
-    
-<b>delete review, delete model</b>
-
-
-</br>
-   <b>done</b>  (1,5 puntos) Obtener las opciones de autocompletado a partir de una estructura JSON estática definida localmente. Por ejemplo, en el propio template que contiene el formulario y el código Javascript, aunque se valorará que se carguen los datos de un fichero independiente.</br>
-       
-<b> fet, en l'apartat brand</b>
-
-
-</br>
- (1,5 puntos) Obtener las opciones de autocompletado de manera remota, desde un servicio web remoto que, a las consultas con lo que ha escrito hasta el momento el usuario en la entrada del formulario, responde con posible opciones de autocompletado, por ejemplo mediante JSON.</br>
-
-
-
-</p>
 
 {% endif %}
 
