--- a/notebookcompare/notebookapp/templates/models/detailmodel.html
+++ b/notebookcompare/notebookapp/templates/models/detailmodel.html
@@ -7,32 +7,55 @@
 {% block content %}
 
 
+<div prefix="
+  rdf: http://www.w3.org/1999/02/22-rdf-syntax-ns#
+  foaf: http://xmlns.com/foaf/0.1/
+  gr: http://purl.org/goodrelations/v1#
+  xsd: http://www.w3.org/2001/XMLSchema#"
+  typeof="gr:Offering">
+  <div>
 
-
+	
 		<center>
 		{% if pictureurl|length > 0 %}
-			<img src="{{ pictureurl }}" width ="500" align="right"> </img>
+			 <div rel="foaf:depiction"><img src="{{ pictureurl }}" width ="500" align="right"> </img></div>
 		{% endif %}
 
-		<h2>{{ brand }}  {{ name }}</h2> 
-		Brand:  <a href="/brands/view/{{ brand }}"> 
-		{{ brand }} </a>  </br>
-		
-		Price: <b>{{ price }} € </b></br>
-		Date of launchment: {{ date }} </br></br>
+		<h2 property="gr:name">{{ brand }} {{ name }}</h2></span></h2> 
+		Brand:  <a href="/brands/view/{{ brand }}">  
+		<span itemprop="manufacturer">{{ brand }}  </span> </a>  <a rel="foaf:page" href="http://{{ brand.web }}">Brand Website</a> </br>
+		Model: <span itemprop="model">{{ name }}</span></br>
+
+      <span property="gr:hasPriceSpecification" typeof="gr:UnitPriceSpecification">
+      <span property="gr:hasCurrency" content="EUR">€</span>
+      Price: <b><span property="gr:hasCurrencyValue" datatype="xsd:float">{{ price }}</span></b></br>
+    </span>
+
+
+		Date of launchment: <span itemprop="gr:releaseDate">{{ date }}</span> </br></br>
 		Added by: {{ user }} </br></br>
-		<table>
+
+	<table>
 		<th>Specifications:</th>
 		
 		{% for name in spec %}
-			<tr><td>{{ name }} </td></tr>
+			<tr><td><span property="gr:description">{{ name }} </span></td></tr>
 			
 		{% endfor %}
 		
 		
 		</table>
 		</br>
-		
+
+
+
+   
+  </div>
+</div>
+
+
+	
+	
 		<a href="/brands/view/{{ brand }}/models/"> Other {{ brand }} Model </a>
 		</br>
 
@@ -41,7 +64,7 @@
 		<a href="/review/{{ id }}/add/"> Add Review </a>
 		</br>
 		</center>
-<div>
+
 <table id="flex1" width="auto" style="display:none">
 		<thead>
 			<tr>
