Refer tota la vista per evitar problemes amb span i divs,
ara ja funciona tot.

--- a/notebookcompare/notebookapp/templates/base.html
+++ b/notebookcompare/notebookapp/templates/base.html
@@ -1,5 +1,6 @@
 {% load staticfiles %}
-<html>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 
 	<title>{{ titlehead}} - Notebook Compare </title>
